# STRUMP-I

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_wheel.py  example_library_call.py  setup.cfg
strump_i/: __init__.py  __main__.py  run_pipeline.py  strumpi.py
strump_i/dockerfile/: dockerfile  strumpi_centos.dockerfile  strumpi_ubuntu.dockerfile
strump_i/functions/: build_template.py  calculate_energy.py  calculate_sasa.py  classify.py  find_template.py  optimize_template.py  parse_energy.py  parse_quality.py  parse_quality_bak.py  parse_quality_for_ref.py  parse_sasa.py  predict_binder.py  strumpi_scaler.py
strump_i/reference/: HLA_template.pickle  IMGT_structure_summary.csv  PDB_template.pickle  force.key
strump_i/reference/model/binding/: scaler.pkl
strump_i/script_validation/: build_recheck.py  build_template_validation.py  cal_e_parallel.py  calculate_energy_validation.py  calculate_roc_score.py  find_template validation.py  fix_reference_coords.py  generate_strumpi_prediction_model.py  iteration_validation.py  make_input.py  optimize_template_validation.py  optimize_template_validation2.py  peptide_list.txt  plt_drawing.py  redesigned_repairing_code.py  reference_template_position_change.py  repair_parallel_run.py  repairing_test.py  strump_i_out_check_cmd.txt  test_script.py
