[metadata]
name = strump-i
version = 0.1.0
description = Structure-based peptide/MHC-I prediction pipeline (STRUMP-I)
long_description = file: README.md
long_description_content_type = text/markdown
author = STRUMP-I authors
license = MIT
license_files = LICENSE*

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy
    pandas
    tqdm
    lightgbm
    scikit-learn
    psutil
    matplotlib
    seaborn

[options.extras_require]
sasa =
    freesasa

[options.entry_points]
console_scripts =
    strumpi = strump_i.__main__:main
